Move menu html to the bottom fo the page so it doesn't cause a flickering issue on the initial load. Added z-index to main page so it always shows above the menu

--- a/css/style.scss
+++ b/css/style.scss
@@ -422,6 +422,11 @@ code {
     visibility: hidden;
 }
 
+.page-content {
+    // always show above the menu
+    z-index: 2;
+}
+
 .single {
 	height:100%;
 	max-height: 100%;
